# mockstream

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: install-config.cmake  install-rules.cmake
include/mockstream/: common.h  mockstream.h  model.h  stream_point.h
include/mockstream/models/: fixed.h  identity.h
tests/: CMakeLists.txt  common_test.cpp  main.cpp  model_test.cpp  utils.h
